fix: left side nav second level not showing when clicked

--- a/src/components/NavSecondLevel/nav-second-level.scss
+++ b/src/components/NavSecondLevel/nav-second-level.scss
@@ -6,7 +6,6 @@
     position: absolute;
     left: 5rem;
     top: 0;
-    width: 0;
     height: 100%;
     overflow: hidden;
     background-color: #fff;
