--- a/src/components/TopNav/top-nav.scss
+++ b/src/components/TopNav/top-nav.scss
@@ -16,7 +16,7 @@
     }
 
     .trigger {
-        padding: 1.5rem;
+        padding: 2.5rem;
     }
 
     .left-side,
